fixed map overflow bug when on small screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -525,6 +525,10 @@
       @media only screen and (max-width: 1100px) {
         .location {
           text-align: center;
+
+          .iframe {
+            width: 98%;
+          }
         }
       }
     }
